--- a/package.json
+++ b/package.json
@@ -37,9 +37,13 @@
     "eslint-plugin-testing-library": "^5.10.2",
     "jest": "^29.5.0",
     "jest-watch-typeahead": "^2.2.2",
+    "msw": "^1.1.0",
     "prettier": "^2.8.4",
     "react-test-renderer": "^18.2.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
+  },
+  "msw": {
+    "workerDirectory": "dist"
   }
 }
