--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
+    "react-slick": "^0.29.0",
     "recoil": "^0.7.7",
     "vite-plugin-svgr": "^2.4.0"
   },
